--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -778,6 +778,8 @@
 	<string>EFC4F134-F633-48DF-91D9-9416B43EEDCE</string>
 	<key>Default Toolbelt Width</key>
 	<real>250</real>
+	<key>DetectPasswordInput</key>
+	<false/>
 	<key>Hotkey</key>
 	<false/>
 	<key>HotkeyChar</key>
